# first-discord-bot

./: .env  discord.py  main.py  pyproject.toml
