[tool.poetry]
name = "repl_python3_first-discord-bot"
version = "0.1.0"
description = ""
authors = ["ashwinexe <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
flask = "^2.0.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
